Fix z-index

--- a/src/app/style/loading.modal.less
+++ b/src/app/style/loading.modal.less
@@ -6,6 +6,7 @@
     width: 2em;
     height: 2em;
     position: absolute;
+    z-index: 100000;
     background-color: @global-primary-text-color;
     top: ~"calc(50% - 2.5em)";
     left: ~"calc(50% - 1em)";
